--- a/client/screenModels/calendar.ui
+++ b/client/screenModels/calendar.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1000</width>
-    <height>700</height>
+    <width>900</width>
+    <height>556</height>
    </rect>
   </property>
   <property name="font">
@@ -22,9 +22,9 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>80</y>
+     <y>60</y>
      <width>491</width>
-     <height>591</height>
+     <height>491</height>
     </rect>
    </property>
   </widget>
@@ -106,30 +106,17 @@
     <string/>
    </property>
   </widget>
-  <widget class="QPushButton" name="goBackButton">
-   <property name="geometry">
-    <rect>
-     <x>850</x>
-     <y>20</y>
-     <width>131</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Go Back</string>
-   </property>
-  </widget>
   <widget class="QTabWidget" name="calendarTabs">
    <property name="geometry">
     <rect>
      <x>510</x>
      <y>60</y>
-     <width>481</width>
-     <height>621</height>
+     <width>381</width>
+     <height>491</height>
     </rect>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>2</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -187,8 +174,8 @@
        <rect>
         <x>10</x>
         <y>90</y>
-        <width>461</width>
-        <height>291</height>
+        <width>361</width>
+        <height>351</height>
        </rect>
       </property>
       <property name="widgetResizable">
@@ -199,8 +186,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>459</width>
-         <height>289</height>
+         <width>359</width>
+         <height>349</height>
         </rect>
        </property>
        <widget class="QTreeWidget" name="calendarEventList">
@@ -208,8 +195,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>461</width>
-          <height>341</height>
+          <width>361</width>
+          <height>351</height>
          </rect>
         </property>
         <column>
@@ -236,177 +223,88 @@
        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
       </property>
      </widget>
-     <widget class="QPushButton" name="newEventButton">
-      <property name="geometry">
-       <rect>
-        <x>340</x>
-        <y>54</y>
-        <width>131</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Add new</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="deleteEventButton">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="geometry">
-       <rect>
-        <x>340</x>
-        <y>10</y>
-        <width>131</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Delete</string>
-      </property>
-     </widget>
-     <widget class="QFrame" name="n">
-      <property name="enabled">
-       <bool>false</bool>
-      </property>
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>390</y>
-        <width>461</width>
-        <height>141</height>
-       </rect>
-      </property>
-      <property name="frameShape">
-       <enum>QFrame::StyledPanel</enum>
-      </property>
-      <property name="frameShadow">
-       <enum>QFrame::Raised</enum>
-      </property>
-      <widget class="QLabel" name="newEventDateLabel">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>10</y>
-         <width>71</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Date:</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-      </widget>
-      <widget class="QDateTimeEdit" name="newEventDateTime">
-       <property name="geometry">
-        <rect>
-         <x>100</x>
-         <y>10</y>
-         <width>351</width>
-         <height>31</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="newEventNameLabel">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>50</y>
-         <width>71</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Name:</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="newEventNameField">
-       <property name="geometry">
-        <rect>
-         <x>100</x>
-         <y>50</y>
-         <width>351</width>
-         <height>31</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="newEventConfirmButton">
-       <property name="geometry">
-        <rect>
-         <x>140</x>
-         <y>100</y>
-         <width>171</width>
-         <height>25</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Confirm</string>
-       </property>
-      </widget>
-     </widget>
-     <widget class="QLabel" name="label_2">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>540</y>
-        <width>461</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>TextLabel</string>
-      </property>
-     </widget>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="tab_3">
+    <attribute name="title">
+     <string>New Event</string>
+    </attribute>
+    <widget class="QLabel" name="newEventDateLabel">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>71</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Date:</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QDateTimeEdit" name="newEventDateTime">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>50</y>
+       <width>351</width>
+       <height>41</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="newEventNameLabel">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>100</y>
+       <width>71</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Name:</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="newEventNameField">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>140</y>
+       <width>351</width>
+       <height>41</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="newEventConfirmButton">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>210</y>
+       <width>181</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Confirm</string>
+     </property>
     </widget>
    </widget>
    <widget class="QWidget" name="tab_2">
     <attribute name="title">
      <string>Users</string>
     </attribute>
-    <widget class="QScrollArea" name="scrollArea_2">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>10</y>
-       <width>461</width>
-       <height>341</height>
-      </rect>
-     </property>
-     <property name="widgetResizable">
-      <bool>true</bool>
-     </property>
-     <widget class="QWidget" name="scrollAreaWidgetContents_2">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>459</width>
-        <height>339</height>
-       </rect>
-      </property>
-      <widget class="QListWidget" name="listWidget">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>461</width>
-         <height>341</height>
-        </rect>
-       </property>
-      </widget>
-     </widget>
-    </widget>
     <widget class="QPushButton" name="deleteUserButton">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>370</y>
-       <width>211</width>
+       <x>10</x>
+       <y>300</y>
+       <width>171</width>
        <height>31</height>
       </rect>
      </property>
@@ -417,9 +315,9 @@
     <widget class="QPushButton" name="addUserButton">
      <property name="geometry">
       <rect>
-       <x>250</x>
-       <y>370</y>
-       <width>211</width>
+       <x>190</x>
+       <y>300</y>
+       <width>171</width>
        <height>31</height>
       </rect>
      </property>
@@ -431,9 +329,9 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>420</y>
-       <width>461</width>
-       <height>101</height>
+       <y>340</y>
+       <width>361</width>
+       <height>111</height>
       </rect>
      </property>
      <property name="frameShape">
@@ -447,7 +345,7 @@
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>101</width>
+        <width>81</width>
         <height>31</height>
        </rect>
       </property>
@@ -461,9 +359,9 @@
      <widget class="QLineEdit" name="newUserNameField">
       <property name="geometry">
        <rect>
-        <x>120</x>
+        <x>100</x>
         <y>10</y>
-        <width>331</width>
+        <width>251</width>
         <height>31</height>
        </rect>
       </property>
@@ -471,8 +369,8 @@
      <widget class="QPushButton" name="addNewUserConfirmButton">
       <property name="geometry">
        <rect>
-        <x>120</x>
-        <y>50</y>
+        <x>70</x>
+        <y>60</y>
         <width>191</width>
         <height>31</height>
        </rect>
@@ -494,6 +392,39 @@
      <property name="text">
       <string>TextLabel</string>
      </property>
+    </widget>
+    <widget class="QScrollArea" name="scrollArea_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>351</width>
+       <height>281</height>
+      </rect>
+     </property>
+     <property name="widgetResizable">
+      <bool>true</bool>
+     </property>
+     <widget class="QWidget" name="scrollAreaWidgetContents_2">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>349</width>
+        <height>279</height>
+       </rect>
+      </property>
+      <widget class="QListWidget" name="listWidget">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>0</y>
+         <width>351</width>
+         <height>281</height>
+        </rect>
+       </property>
+      </widget>
+     </widget>
     </widget>
    </widget>
   </widget>
