--- a/client/screenModels/calendarList.ui
+++ b/client/screenModels/calendarList.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1000</width>
-    <height>700</height>
+    <width>900</width>
+    <height>556</height>
    </rect>
   </property>
   <property name="font">
@@ -21,51 +21,12 @@
   <property name="windowTitle">
    <string>Calendar Application</string>
   </property>
-  <widget class="QPushButton" name="logoutButton">
-   <property name="geometry">
-    <rect>
-     <x>860</x>
-     <y>20</y>
-     <width>111</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Logout</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="addCalendarButton">
-   <property name="geometry">
-    <rect>
-     <x>610</x>
-     <y>20</y>
-     <width>241</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Add a new calendar</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="welcomeLabel">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>10</y>
-     <width>561</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Hello, ...!</string>
-   </property>
-  </widget>
   <widget class="QScrollArea" name="scrollArea">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>60</y>
-     <width>581</width>
+     <x>10</x>
+     <y>80</y>
+     <width>491</width>
      <height>421</height>
     </rect>
    </property>
@@ -77,7 +38,7 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>579</width>
+      <width>489</width>
       <height>419</height>
      </rect>
     </property>
@@ -86,114 +47,11 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>891</width>
+       <width>491</width>
        <height>421</height>
       </rect>
      </property>
     </widget>
-   </widget>
-  </widget>
-  <widget class="QFrame" name="newCalendarFrame">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>530</y>
-     <width>961</width>
-     <height>161</height>
-    </rect>
-   </property>
-   <property name="frameShape">
-    <enum>QFrame::StyledPanel</enum>
-   </property>
-   <property name="frameShadow">
-    <enum>QFrame::Raised</enum>
-   </property>
-   <widget class="QLabel" name="newCalendarNamelabel">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>40</y>
-      <width>261</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Name</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-    </property>
-   </widget>
-   <widget class="QLabel" name="newCalendarUserListLabel">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>70</y>
-      <width>301</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>User List (separated by comma)</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="newCalendarNameField">
-    <property name="geometry">
-     <rect>
-      <x>320</x>
-      <y>40</y>
-      <width>621</width>
-      <height>25</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="newCalendarUserListField">
-    <property name="geometry">
-     <rect>
-      <x>320</x>
-      <y>80</y>
-      <width>621</width>
-      <height>25</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="newCalendarConfirmButton">
-    <property name="geometry">
-     <rect>
-      <x>360</x>
-      <y>120</y>
-      <width>171</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Confirm</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="informLabel">
-    <property name="enabled">
-     <bool>false</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>941</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>To add a new calendar, enter data below:</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
    </widget>
   </widget>
   <widget class="QLabel" name="errorLabel">
@@ -202,14 +60,14 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>490</y>
-     <width>961</width>
-     <height>31</height>
+     <x>10</x>
+     <y>20</y>
+     <width>871</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
-    <string/>
+    <string>Error:</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
@@ -221,8 +79,8 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>610</x>
-     <y>60</y>
+     <x>510</x>
+     <y>80</y>
      <width>371</width>
      <height>421</height>
     </rect>
