--- a/client/screenModels/addNewCalendar.ui
+++ b/client/screenModels/addNewCalendar.ui
@@ -24,10 +24,10 @@
   <widget class="QPushButton" name="newCalendarConfirmButton">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>280</y>
+     <x>340</x>
+     <y>340</y>
      <width>221</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
@@ -46,6 +46,11 @@
      <height>41</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>13</pointsize>
+    </font>
+   </property>
    <property name="text">
     <string>To add a new calendar, enter data below:</string>
    </property>
@@ -56,9 +61,9 @@
   <widget class="QLabel" name="newCalendarNamelabel">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>110</y>
-     <width>271</width>
+     <x>20</x>
+     <y>100</y>
+     <width>861</width>
      <height>31</height>
     </rect>
    </property>
@@ -66,56 +71,43 @@
     <string>Name</string>
    </property>
    <property name="alignment">
-    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
   <widget class="QLabel" name="newCalendarUserListLabel">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>150</y>
-     <width>271</width>
+     <x>20</x>
+     <y>210</y>
+     <width>861</width>
      <height>41</height>
     </rect>
    </property>
    <property name="text">
-    <string>User List (separated by comma)</string>
+    <string>User List (separated by semicolons)</string>
    </property>
    <property name="alignment">
-    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
   <widget class="QLineEdit" name="newCalendarUserListField">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>150</y>
+     <x>170</x>
+     <y>260</y>
      <width>581</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
    </property>
   </widget>
   <widget class="QLineEdit" name="newCalendarNameField">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>110</y>
+     <x>170</x>
+     <y>140</y>
      <width>581</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="errorLabel">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>210</y>
-     <width>881</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Error:</string>
    </property>
   </widget>
  </widget>
