--- a/client/screenModels/calendar.ui
+++ b/client/screenModels/calendar.ui
@@ -24,8 +24,15 @@
      <x>10</x>
      <y>60</y>
      <width>491</width>
-     <height>481</height>
+     <height>471</height>
     </rect>
+   </property>
+   <property name="minimumDate">
+    <date>
+     <year>2000</year>
+     <month>1</month>
+     <day>1</day>
+    </date>
    </property>
   </widget>
   <widget class="QLabel" name="nameLabel">
@@ -70,9 +77,9 @@
   <widget class="QLabel" name="ownerLabel">
    <property name="geometry">
     <rect>
-     <x>390</x>
+     <x>400</x>
      <y>10</y>
-     <width>71</width>
+     <width>61</width>
      <height>41</height>
     </rect>
    </property>
@@ -112,11 +119,11 @@
      <x>510</x>
      <y>60</y>
      <width>381</width>
-     <height>481</height>
+     <height>471</height>
     </rect>
    </property>
    <property name="currentIndex">
-    <number>2</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -141,9 +148,9 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>180</y>
+        <y>190</y>
         <width>361</width>
-        <height>221</height>
+        <height>201</height>
        </rect>
       </property>
       <property name="widgetResizable">
@@ -155,7 +162,7 @@
          <x>0</x>
          <y>0</y>
          <width>359</width>
-         <height>219</height>
+         <height>199</height>
         </rect>
        </property>
        <widget class="QListWidget" name="eventList">
@@ -164,7 +171,7 @@
           <x>0</x>
           <y>0</y>
           <width>361</width>
-          <height>221</height>
+          <height>201</height>
          </rect>
         </property>
        </widget>
@@ -177,7 +184,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>410</y>
+        <y>400</y>
         <width>361</width>
         <height>31</height>
        </rect>
@@ -195,7 +202,7 @@
         <x>10</x>
         <y>10</y>
         <width>361</width>
-        <height>161</height>
+        <height>171</height>
        </rect>
       </property>
       <property name="frameShape">
@@ -208,7 +215,7 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>120</y>
+         <y>130</y>
          <width>341</width>
          <height>31</height>
         </rect>
@@ -221,8 +228,8 @@
        <property name="geometry">
         <rect>
          <x>90</x>
-         <y>80</y>
-         <width>251</width>
+         <y>90</y>
+         <width>261</width>
          <height>31</height>
         </rect>
        </property>
@@ -283,7 +290,7 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>80</y>
+         <y>90</y>
          <width>51</width>
          <height>31</height>
         </rect>
@@ -364,19 +371,6 @@
       <string>Confirm</string>
      </property>
     </widget>
-    <widget class="QLabel" name="newEvenErrorLabel">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>280</y>
-       <width>361</width>
-       <height>51</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>TextLabel</string>
-     </property>
-    </widget>
    </widget>
    <widget class="QWidget" name="tab_2">
     <attribute name="title">
@@ -434,7 +428,7 @@
        <x>10</x>
        <y>250</y>
        <width>351</width>
-       <height>191</height>
+       <height>181</height>
       </rect>
      </property>
      <property name="frameShape">
@@ -462,7 +456,7 @@
         <x>10</x>
         <y>50</y>
         <width>331</width>
-        <height>131</height>
+        <height>121</height>
        </rect>
       </property>
       <property name="frameShape">
@@ -475,7 +469,7 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>40</y>
+         <y>20</y>
          <width>81</width>
          <height>31</height>
         </rect>
@@ -491,7 +485,7 @@
        <property name="geometry">
         <rect>
          <x>100</x>
-         <y>40</y>
+         <y>20</y>
          <width>221</width>
          <height>31</height>
         </rect>
@@ -501,7 +495,7 @@
        <property name="geometry">
         <rect>
          <x>80</x>
-         <y>90</y>
+         <y>70</y>
          <width>171</width>
          <height>31</height>
         </rect>
@@ -551,19 +545,6 @@
      </property>
      <property name="text">
       <string>New calendar name:</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="newCalendarNameErrorLabel">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>180</y>
-       <width>361</width>
-       <height>51</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>TextLabel</string>
      </property>
     </widget>
    </widget>
